Add DidSaveScrollOrScaleState flag to prevent restoreScrollPositionAndViewState restore from default

This flaky is caused by |FrameLoader::restoreScrollPositionAndViewState| called
before |FrameLoader::processFragment| in |checkCompleted| and restore from
default.

So we add DidSaveScrollOrScaleState flag to prevent restoreScrollPositionAndViewState
restore from default.

BUG=672545
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2628683003
Cr-Commit-Position: refs/heads/master@{#451111}

Former-commit-id: 1033be6d096d430b3d1fe6439550448b2374ea4c