third_party/WebKit/Source/core/loader/HistoryItem.cpp
@@ -43,7 +43,8 @@ static long long generateSequenceNumber() {
 }
 
 HistoryItem::HistoryItem()
-    : m_pageScaleFactor(0),
+    : m_didSaveScrollOrScaleState(false),
+      m_pageScaleFactor(0),
       m_itemSequenceNumber(generateSequenceNumber()),
       m_documentSequenceNumber(generateSequenceNumber()),
       m_scrollRestorationType(ScrollRestorationAuto) {}
@@ -91,6 +92,7 @@ const ScrollOffset& HistoryItem::visualViewportScrollOffset() const {
 
 void HistoryItem::setVisualViewportScrollOffset(const ScrollOffset& offset) {
   m_visualViewportScrollOffset = offset;
+  setDidSaveScrollOrScaleState(true);
 }
 
 const ScrollOffset& HistoryItem::getScrollOffset() const {
@@ -99,6 +101,7 @@ const ScrollOffset& HistoryItem::getScrollOffset() const {
 
 void HistoryItem::setScrollOffset(const ScrollOffset& offset) {
   m_scrollOffset = offset;
+  setDidSaveScrollOrScaleState(true);
 }
 
 float HistoryItem::pageScaleFactor() const {
@@ -107,6 +110,7 @@ float HistoryItem::pageScaleFactor() const {
 
 void HistoryItem::setPageScaleFactor(float scaleFactor) {
   m_pageScaleFactor = scaleFactor;
+  setDidSaveScrollOrScaleState(true);
 }
 
 void HistoryItem::setDocumentState(const Vector<String>& state) {
